--- a/blocks/product-desc/product-desc.css
+++ b/blocks/product-desc/product-desc.css
@@ -1,42 +1,42 @@
-.product-desc {
+.product-desc-wrapper .product-desc {
     display: flex;
     flex-direction: column;
     border-top: 1px solid var(--border-color);
 }
 
-.product-desc > div {
+.product-desc-wrapper .product-desc > div {
     display: flex;
     flex-direction: column;
     gap: var(--gap-large);
 }
 
-.product-desc h2 {
+.product-desc-wrapper .product-desc h2 {
     font-family: var(--heading-font-family);
     font-size: var(--heading-font-size-l);
     font-weight: 500;
 }
 
-.product-desc p {
+.product-desc-wrapper .product-desc p {
     font-size: var(--body-font-size-s);
 }
 
-.product-desc li {
+.product-desc-wrapper .product-desc li {
     font-size: var(--body-font-size-s);
 }
 
 @media (width >= 900px) {
-    .product-desc > div {
+    .product-desc-wrapper .product-desc > div {
         flex-direction: row;
         width: 90%;
         gap: var(--gap-large);
         margin: 0 auto;
     }
 
-    .product-desc > div > div {
+    .product-desc-wrapper .product-desc > div > div {
         flex: 1;
     }
 
-    .product-desc h2 {
+    .product-desc-wrapper .product-desc h2 {
         font-size: var(--heading-font-size-xl);
     }
 }
