--- a/blocks/product-showcase/product-showcase.css
+++ b/blocks/product-showcase/product-showcase.css
@@ -7,69 +7,62 @@ h1#top-sellers {
     justify-content: center;
 }
 
-.product-card {
+.product-showcase-wrapper .product-card {
     padding: var(--gap-small);
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
 }
 
-.product-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.product-info {
-    text-align: left;
+.product-showcase-wrapper .product-info {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    margin-top: 2rem;
 }
 
-.product-title {
+.product-showcase-wrapper .product-title {
     font-size: var(--product-title-font-size);
     font-weight: normal;
     color: var(--text-color);
 }
 
-.product-price {
+.product-showcase-wrapper .product-price {
     margin-bottom: var(--gap-small);
     font-size: var(--product-price-font-size);
     font-weight: bold;
     color: var(--text-color);
 }
 
-.product-actions {
+.product-showcase-wrapper .product-actions {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.add-to-cart {
+.product-showcase-wrapper .add-to-cart {
     padding: 0.35rem 0.6rem;
     background: var(--link-color);
     color: var(--button-text);
     font-size: var(--product-button-font-size);
 }
 
-.add-to-cart:hover {
+.product-showcase-wrapper .add-to-cart:hover {
     background: var(--link-hover-color);
 }
 
-.heart-icon {
+.product-showcase-wrapper .heart-icon {
     width: var(--control-size-small);
     height: var(--control-size-small);
     cursor: pointer;
     color: var(--text-color);
 }
 
-.heart-icon:hover {
+.product-showcase-wrapper .heart-icon:hover {
     color: var(--link-hover-color);
 }
 
-.custom-slick-dots {
+.product-showcase-wrapper .custom-slick-dots {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -79,7 +72,7 @@ h1#top-sellers {
     transform: translateX(-50%);
 }
 
-.custom-slick-dots li {
+.product-showcase-wrapper .custom-slick-dots li {
     display: flex;
     width: 12px;
     height: 12px;
@@ -87,11 +80,11 @@ h1#top-sellers {
     position: relative;
 }
 
-.custom-slick-dots li button {
+.product-showcase-wrapper .custom-slick-dots li button {
     background: transparent;
 }
 
-.custom-slick-dots li button:before {
+.product-showcase-wrapper .custom-slick-dots li button:before {
     content: '';
     width: 12px;
     height: 12px;
@@ -102,72 +95,73 @@ h1#top-sellers {
     left: 0;
 }
 
-.custom-slick-dots li.slick-active button:before {
+.product-showcase-wrapper .custom-slick-dots li.slick-active button:before {
     background-color: rgb(24, 24, 25);
 }
 
 @media (width >= 360px) {
-    .product-card {
+    .product-showcase-wrapper .product-card {
         padding: var(--gap-medium);
     }
 
-    .product-title {
+    .product-showcase-wrapper .product-title {
         font-size: var(--product-title-mobile-font-size);
+        margin: 1rem 0;
     }
 
-    .product-price {
+    .product-showcase-wrapper .product-price {
         font-size: var(--product-price-mobile-font-size);
-        margin-bottom: var(--gap-medium);
+        margin: 0;
     }
 
-    .add-to-cart {
+    .product-showcase-wrapper .add-to-cart {
         font-size: var(--product-button-mobile-font-size);
     }
-    .heart-icon{
+
+    .product-showcase-wrapper .heart-icon {
         width: 20px;
         height: 20px;
-    }
-    .custom-slick-dots{
-        left: 45%;
     }
 }
 
 @media (width >= 600px) {
-    .product-title {
+    .product-showcase-wrapper .product-title {
         font-size: 1.2rem;
     }
 
-    .product-price {
+    .product-showcase-wrapper .product-price {
         font-size: 1.1rem;
     }
-    .heart-icon {
+
+    .product-showcase-wrapper .heart-icon {
         width: 22px;
         height: 22px;
     }
 }
 
 @media (width >= 900px) {
-    .product-title {
+    .product-showcase-wrapper .product-title {
         font-size: var(--heading-font-size-xs);
         margin: 0;
         margin-bottom: 3%;
     }
 
-    .product-price {
+    .product-showcase-wrapper .product-price {
         font-size: var(--heading-font-size-xs);
         font-weight: 300;
         margin: 0;
     }
 
-    .add-to-cart {
+    .product-showcase-wrapper .add-to-cart {
         padding: 0.3rem 2.5rem;
         font-size: var(--heading-font-size-xs);
     }
-    .add-to-cart:hover{
-        background:var(--text-color);
+
+    .product-showcase-wrapper .add-to-cart:hover {
+        background: var(--text-color);
     }
 
-    .heart-icon {
+    .product-showcase-wrapper .heart-icon {
         width: 24px;
         height: 24px;
     }
