--- a/blocks/teaser/teaser.css
+++ b/blocks/teaser/teaser.css
@@ -1,4 +1,3 @@
-/* Base mobile styles (below 360px) */
 .teaser-wrapper {
     display: flex;
     justify-content: center;
@@ -7,7 +6,7 @@
     margin-top: 5rem;
 }
 
-.teaser {
+.teaser-wrapper .teaser {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,29 +15,29 @@
     width: 100%;
 }
 
-.teaser > div {
+.teaser-wrapper .teaser > div {
     position: relative;
     width: 100%;
     max-width: 100%;
     overflow: hidden;
 }
 
-.teaser picture {
+.teaser-wrapper .teaser picture {
     display: block;
     width: 100%;
     height: auto;
 }
 
-.teaser img {
+.teaser-wrapper .teaser img {
     width: 100%;
     height: auto;
     display: block;
     object-fit: cover;
 }
 
-.teaser > div > div:nth-child(2) {
+.teaser-wrapper .teaser > div > div:nth-child(2) {
     position: absolute;
-    top: 15%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -48,98 +47,95 @@
     border-radius: 0.5rem;
 }
 
-.teaser h2 {
+.teaser-wrapper .teaser h2 {
     font-size: 1.2rem;
     margin-bottom: 0.3rem;
     font-weight: 600;
 }
 
-.teaser p {
+.teaser-wrapper .teaser p {
     font-size: 0.8rem;
     margin: 0;
 }
 
-/* Mobile styles (360px and up) */
 @media (width >= 360px) {
     .teaser-wrapper {
         padding: 1.5rem;
         margin-top: 6rem;
     }
 
-    .teaser {
+    .teaser-wrapper .teaser {
         gap: 1.2rem;
         max-width: 95%;
     }
 
-    .teaser > div {
+    .teaser-wrapper .teaser > div {
         max-width: 95%;
     }
 
-    .teaser h2 {
+    .teaser-wrapper .teaser h2 {
         font-size: 1.5rem;
         margin-bottom: 0.4rem;
     }
 
-    .teaser p {
+    .teaser-wrapper .teaser p {
         font-size: 0.9rem;
     }
 }
 
-/* Tablet styles (600px and up) */
 @media (width >= 600px) {
     .teaser-wrapper {
         padding: 1.8rem;
         margin-top: 8rem;
     }
 
-    .teaser {
+    .teaser-wrapper .teaser {
         flex-direction: row;
         flex-wrap: wrap;
         gap: 1.5rem;
     }
 
-    .teaser > div {
+    .teaser-wrapper .teaser > div {
         flex: 1 1 45%;
         max-width: 48%;
     }
 
-    .teaser h2 {
+    .teaser-wrapper .teaser h2 {
         font-size: 2rem;
         margin-bottom: 0.5rem;
     }
 
-    .teaser p {
+    .teaser-wrapper .teaser p {
         font-size: 0.95rem;
     }
 }
 
-/* Desktop styles (900px and up) */
 @media (width >= 900px) {
     .teaser-wrapper {
         padding: 2rem;
         margin-top: 10rem;
     }
 
-    .teaser {
+    .teaser-wrapper .teaser {
         gap: 2%;
         max-width: 90%;
     }
 
-    .teaser > div {
+    .teaser-wrapper .teaser > div {
         flex: 1 1 30%;
         max-width: 35%;
     }
 
-    .teaser > div > div:nth-child(2) {
+    .teaser-wrapper .teaser > div > div:nth-child(2) {
         width: 80%;
         padding: 1rem;
     }
 
-    .teaser h2 {
+    .teaser-wrapper .teaser h2 {
         font-size: 2.5rem;
     }
 
-    .teaser p {
+    .teaser-wrapper .teaser p {
         font-size: 1rem;
     }
 }
